<resources>
    <string name="app_name">Mobile</string>
    <string name="txt_company_sea_choose">Thông tin các đơn vị thành viên:</string>
    <string name="txt_company_sea_choose_require">Chưa có thông tin công ty, hãy chọn công ty !</string>
    <string name="handicrafted_by_n_jim_hls">Handicrafted by \n</string>
    <string name="handicrafted_by_hls">Jim HLS</string>
    <string name="if_you_joke_wrong_way_your_teeth_have_to_pay_serious">If you joke wrong way, your teeth have to pay. (Serious)</string>
    <string name="a_joke_a_day_keeps_the_doctor_away">A joke a day keeps the doctor away</string>
    <string name="copyright_2021_hls">Copyright 2021 HLS</string>
    <string name="company_description">This app is created as part of Hlsolutions program. The materials con-tained on this website are provided for information only and do not constitute any form of advice. HLS assumes no responsibility for the accuracy of any particular statement and accepts no liability for any loss or damage which may arise from reliance on the infor-mation contained on this site</string>
    <string name="this_is_funny">This is Funny!</string>
    <string name="this_is_not_funny">This is not funny!</string>
</resources>